objects/FieloSVY__SurveyResponse__c.object
<CustomObject>
    <fields>
        <fullName>F_PRM_ReasonForRejection__c</fullName>
        <label>Reason for Rejection</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloSVY__EventPollster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pollster Event</label>
        <referenceTo>FieloEE__Event__c</referenceTo>
        <relationshipLabel>Survey Responses (Pollster Event)</relationshipLabel>
        <relationshipName>Survey_Responses_Pollster</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloSVY__Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>FieloEE__Event__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloSVY__Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>FieloEE__Member__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloSVY__Pollster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pollster</label>
        <referenceTo>FieloEE__Member__c</referenceTo>
        <relationshipLabel>Survey Responses (Pollster)</relationshipLabel>
        <relationshipName>Survey_Responses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloSVY__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloSVY__Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>FieloSVY__Survey__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>SurveyResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloSVY__TransactionPollster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pollster Transaction</label>
        <referenceTo>FieloEE__Transaction__c</referenceTo>
        <relationshipLabel>Survey Responses (Pollster Transaction)</relationshipLabel>
        <relationshipName>Survey_Responses_Pollster</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloSVY__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>FieloEE__Transaction__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloSVY__UniqueKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Survey Response</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SR-{00000}</displayFormat>
        <label>Survey Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>F_PRM_ReasonForRejection</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( FieloSVY__Status__c , &apos;Rejected&apos;), ISBLANK( F_PRM_ReasonForRejection__c ) )</errorConditionFormula>
        <errorDisplayField>F_PRM_ReasonForRejection__c</errorDisplayField>
        <errorMessage>Please specify reason for survey rejection</errorMessage>
    </validationRules>
</CustomObject>